adding sample file for filesystem, gdrive and database

--- a/configs/databases.example.yaml
+++ b/configs/databases.example.yaml
@@ -1,5 +1,5 @@
 ---
 # List of available database's name.
-name:
+name: # Database's name that will be exported into .sql format
   - DatabaseA
   - DatabaseB
