adding -m option to send mail notification
- added mail notification
- added amd64 both linux and darwin

--- a/configs/mail.example.yaml
+++ b/configs/mail.example.yaml
@@ -1,5 +1,7 @@
 ---
 # Mail configurations
+from: "from@example.com"
+to: "to@example.com"
 host: "smtp.mailtrap.io"
 port: "2525"
 username: "username"
